# git-commit-analytics

./: .gitignore  .prettierignore  .releaserc  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  README.zh-CN.md  config.json  eslint.config.js  jsconfig.json  package.json  pnpm-lock.yaml  sea-config.json  tsup.config.mjs
.github/workflows/: auto-pr.yml  release.yml  upload-release-asset.yml
scripts/: build.js  verifyCommit.js
src/: config.json  index.js  main.rs
src/config/: constants.rs  error.rs  mod.rs  schema.rs  store.rs  types.rs
src/i18n/: mod.rs
src/i18n/messages/: en.rs  zh.rs
src/libs/: confirmExit.js  formatCommit.js  formatLog.js  getBasePath.js  getConfig.js  getRepoName.js  saveReport.js
src/utils/: check_git.rs  filter_logs.rs  format_commit.rs  format_log.rs  get_repo_logs.rs  get_repo_name.rs  keypress.rs  mod.rs  save_report.rs
test/: authors.test.js  excludes.test.js  includes.test.js
